--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "devDependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.15",
     "grammy": "^1.7.3"
   }
 }
