--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
     "clean": "rm -rf build",
     "build:lib": "tsc -p tsconfig.lib.json",
     "build": "npm run clean && npm run build:lib",
-    "prepublish": "npm run build",
-    "lint": "eslint \"src/**/*.ts\"",
-    "test": "jest",
-    "test:ci": "jest --ci --coverage",
-    "prepublishOnly": "npm run lint && npm run test"
+    "prepublish": "npm run build"
   },
   "keywords": [],
   "dependencies": {
